--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,29 +6,23 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Java CI with Maven
+runs-on: ubuntu-latest
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+steps:
+  - name: Checkout repository
+    uses: actions/checkout@v2
 
-jobs:
-  build:
+  - name: Set up JDK 11
+    uses: actions/setup-java@v2
+    with:
+      java-version: '11'
 
-    runs-on: ubuntu-latest
+  - name: Build with Maven
+    run: mvn clean package
 
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+  - name: Run Tests
+    run: mvn test
+
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
